  Added Chat Trigger
  Added Has Criteria Condition
  Added Has Potion Effect Condition
  Added Has True/False Condition
  Added Has Points Condition
  Added Has Achievement Condition
  Added Spawn Entity Reward
  Added Teleport Player Reward
  Added Place Block Reward
  Added Potion Effect Reward
  Added Hide/Show Tab Reward
  Added Step Assist Reward
  Removed the Option to select the item you want to use to open editor (now just the progression book)
    Allows for Unlocking of Tabs with Criteria
    The normal invisibility is if you want a tab to be permanently invisible (for logic)
 The Criteria Reward can now make Criteria Impossible to complete, an example of use would be to remove crafting criteria and never be able to complete it again

Progression 0.4.1
  Add On Second Trigger
  Fix click position for popup toggle
  Fix potential crash when editing
  Fix saving/loading of player data

Progression 0.4.0
  Add Support for Thermal Expansion Machinist's Workbench
  Add Support for Thaumcraft Worktable
  Added On Eaten Trigger
  Added On Achievement Trigger
  Added Remove Item Reward
  Add Achievement Popup when completing a Criteria (can be toggled off per criteria)
  Can drag the mouse to scroll through the tree editor
  Only display links when criteria are in the same tab
  Speed will now work on negative speeds, as well as not require sprint pressing
  Add three booleans to speed, whether it affects land, air or water speed
  Criteria now stored in seperate areas for ssp/smp
  Fix a bunch of things?
  
Progression 0.3.8
  Fix commands in smp

Progression 0.3.7
  Fix Obtain Trigger
  Add config to disable nei display for locked recipes

Progression 0.3.6
  Fix saving of items with nbt
  Move some things from options to criteria.json where it applies
  Make Obtain trigger check every 1 and a half seconds instead of every tick
  Allow changing of the item to to open the gui
  Fix Potential crash when rendering criteria